# megaton

./: .env.example  Dockerfile  README.md  db.sql  pyproject.toml  requirements.txt
.github/workflows/: poetry-export.yml
src/: bot.py  main.py
src/cogs/: Antispam.py  Automod.py  Bot_Info.py  Bot_Owner.py  Config.py  Console.py  Economy.py  Error.py  Fun.py  Help.py  Level.py  Logging.py  Moderation.py  Music.py  Utility.py  Welcome.py  dbl.py  stat.py
src/db/: __init__.py  db.py
src/utils/: __init__.py  check_env.py  data.py  embedhelper.py  get_prefix.py  get_time.py
